<resources>
    <string name="app_name">Gayatri Vidhya Parishad</string>
    <string name="log_in">Log In</string>
    <string name="roll_no">Roll No</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="hello_medapati_charan_saiyesh_reddy">MEDAPATI CHARAN SAIYESH REDDY</string>
    <string name="choose_branch">Choose Your Department :</string>
    <string name="computer_science">Computer Science</string>
    <string name="cse_department">cse department</string>
    <string name="ece_department">ece department</string>
    <string name="eee_department">eee department</string>
    <string name="mechanical_department">mechanical department</string>
    <string name="chemical_department">chemical department</string>
    <string name="civil_department">civil department</string>
    <string name="hello">Hello!!!</string>
    <string name="pranalini">MEDAPATI CHARAN SAIYESH REDDY</string>
    <string name="cse">Cse</string>
    <string name="mining">Computer Science</string>
    <string name="charan">Charan</string>
    <string name="one0">    Dr. P. Krishna Subba Rao</string>
    <string name="one1">	Dr. D. Ravi</string>
    <string name="one2">Dr. P. Prapoorna Roja</string>
    <string name="one3">Mr. P.Aravind</string>
    <string name="one4">	Dr. N.V.S. Lakshmipathi Raju</string>
    <string name="one5">	Dr. D.N.D.Harini</string>
    <string name="one6">Dr. D Uma Devi</string>
    <string name="one7">	Dr. Y. Anuradha</string>
    <string name="one8">Dr. H. Parthasarathi Patra</string>
    <string name="one9">	Dr. R.Velumani</string>
    <string name="one10">Dr. CH.Sita Kumari</string>
    <string name="one11">	Dr. A.Ajay Kumar</string>
    <string name="one12">Dr. G. Satya Keerthi</string>
    <string name="one13">Dr. K.Narasimha Raju</string>
    <string name="one14">Dr. Ch. Avinash</string>
    <string name="one15">	Ms. P. Sravya</string>
    <string name="one16">Ms. G.V. Hindumathi</string>
    <string name="one17">Ms. Geetanjali Nayak</string>
    <string name="one18">Mr. Y.V.Ramanjaneyulu</string>
    <string name="one19">Mrs. V. Tulasi</string>
    <string name="one20">Mr. Ch. Srikanth Varma</string>
    <string name="one21">	Ms. E. Sirisha</string>
    <string name="one22">Mr. K. Soma Sekhar</string>
    <string name="one23">Mr. M.S.N. Murthy</string>
    <string name="one24">Ms. J.B.Pavana Jyothi</string>
    <string name="one25">Ms. G.Vani</string>
    <string name="one26">	Miss. P. Malleswari</string>
    <string name="one27">Miss. K. Beulah</string>
    <string name="one28">Miss. P. Sai Deepika</string>
    <string name="one29">Miss. K. Suma Sree</string>
    <string name="one30">Miss. B.Pranalini</string>
    <string name="two0">M.Tech.,Ph.D.(ANU)</string>
    <string name="two1">M.Tech., Ph.D.(IISc, Bangalore)</string>
    <string name="two2">Ph.D(JNTU-H)        </string>
    <string name="two3">B.Tech., M.Tech.,(Ph.D)  </string>
    <string name="two4">M.Tech.,Ph.D</string>
    <string name="two5">M.Tech., Ph.D</string>
    <string name="two6">M.Tech., Ph.D</string>
    <string name="two7">M.Tech., Ph.D</string>
    <string name="two8">M.Tech.,Ph.D </string>
    <string name="two9">M.E.,Ph.D</string>
    <string name="two10">B.Tech., M.Tech.(AU).,Ph.D</string>
    <string name="two11">M.Tech.,Ph.D</string>
    <string name="two12">M.Tech.,Ph.D</string>
    <string name="two13">B.Tech( CSE), M.Tech(CST), PhD (CSE)</string>
    <string name="two14">M.Tech (JNTUK), Ph.D.(ISRO-IIST)</string>
    <string name="two15">B.Tech.,M.Tech.,(Ph.D)   </string>
    <string name="two16">B.Tech.,M.Tech.,(Ph.D)</string>
    <string name="two17">B.Tech.,M.Tech.(BPUT)</string>
    <string name="two18">M.Tech., (Ph.D) </string>
    <string name="two19">B.Tech., M.Tech..,(Ph.D)</string>
    <string name="two20">M.Tech.(AU)</string>
    <string name="two21">B.Tech,M.Tech,(Ph.D)</string>
    <string name="two22">M.Tech.(JNTU-H),(Ph.D)</string>
    <string name="two23">M.Tech.(JNTU-K),(Ph.D)</string>
    <string name="two24">M.Tech. </string>
    <string name="two25">M.Tech.(A.U),(Ph.D)</string>
    <string name="two26">M.Tech.</string>
    <string name="two27">B.Tech., M.Tech.,(Ph.D)</string>
    <string name="two28">B.Tech., M.Tech.,(Ph.D)</string>
    <string name="two29">M.Tech.</string>
    <string name="two30">M.Tech.</string>
    <string name="two">Tw0</string>
    <string name="title_activity_navigatior">Navigatior</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="remove_teacher">Remove Teacher</string>
    <string name="add_student">Add Student</string>
    <string name="linkedin">LinkedIn</string>
    <string name="see_resume">See Resume</string>
    <string name="title_activity_teacher">TeacherActivity</string>


</resources>