<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="198dp"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/banner" />
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pranalini"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:paddingStart="8dp"
            android:textSize="24sp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cse"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="bottom"
        android:textSize="24sp"
        android:paddingStart="208dp"/>
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mining"
        android:layout_marginTop="80dp"
        android:paddingStart="208dp"
        android:layout_gravity="bottom"
        android:textSize="24sp"/>
</androidx.cardview.widget.CardView>